--- a/content/posts/2012-03-28-First.rst
+++ b/content/posts/2012-03-28-First.rst
@@ -1,7 +1,7 @@
 First Post!
 ###########
 
-:date: 2012-03-28 8:43
+:date: 2012-03-28
 :category: general
 
 Time has come for me to crawl out from the rock I'm under and join the
@@ -9,7 +9,7 @@ early 2000's.  I generally try to keep a low profile on the internet, but
 lately I've started to feel as if I should participate a little more in
 my interests.
 
-This site will mostly be a dumping ground for the random throughts I have and
+This site will mostly be a dumping ground for the random thoughts I have and
 projects that I work on. So far I haven't found a great way to keep track of
 the things that I might want to refer to again.  Hopefully this will work and
 no one else will ever find it.
